Fixed line spacing

--- a/src/styles/about-us.module.scss
+++ b/src/styles/about-us.module.scss
@@ -29,6 +29,7 @@ $logo-orange-1: #ea9b58;
 
 .intro-copy {
   font-weight: 300;
+  line-height: 1.25;
 }
 
 .our-values {
@@ -47,4 +48,5 @@ $logo-orange-1: #ea9b58;
 
 .value-text {
   font-weight: 300;
+  line-height: 1.25;
 }
