--- a/src/styles/hero-section.module.scss
+++ b/src/styles/hero-section.module.scss
@@ -72,7 +72,7 @@ $logo-green: #7bb41c;
   width: 25%;
 }
 
-.hero-text h1 {
+.hero-heading {
   line-height: 1.2;
   margin-bottom: 0.8rem;
 }
@@ -81,9 +81,9 @@ $logo-green: #7bb41c;
   color: $logo-green;
 }
 
-.hero-text p {
+.hero-copy {
   font-weight: 300;
-  line-height: 1.15;
+  line-height: 1.2;
   margin-bottom: 3.2rem;
 }
 
