--- a/src/styles/menu-section.module.scss
+++ b/src/styles/menu-section.module.scss
@@ -80,6 +80,7 @@ $logo-green-shade-1: #3d570e;
   font-size: 1.6rem;
   font-weight: 300;
   margin-bottom: 2.4rem;
+  line-height: 1.2;
 }
 
 .price-row {
